# technetope

./: .gitignore  README.md  artists.html  imgui.ini  index.html  technical.html
acoustics/docs/: masterdocs.md  runbook_operations.md
acoustics/firmware/: README.md
acoustics/firmware/include/: Secrets.example.h
acoustics/firmware/src/: main.cpp
acoustics/logs/: heartbeat_20251108.csv
acoustics/pc_tools/: CMakeLists.txt  README.md
acoustics/pc_tools/gui/: CMakeLists.txt
acoustics/pc_tools/gui/src/: main.cpp
acoustics/pc_tools/libs/: CMakeLists.txt
acoustics/pc_tools/monitor/src/: main.cpp
acoustics/pc_tools/scheduler/examples/: sample_staggered.json
acoustics/pc_tools/scheduler/src/: main.cpp
acoustics/state/: devices.json
acoustics/tools/timeline/: generate_sample_staggered.py
locomotion/: simulator_spec.md  toio.md
locomotion/calibration/: APPLE_SILICON_COMPATIBILITY.md  CMakeLists.txt  README.md  implementation_requirements.md
locomotion/calibration/config/: toio_playmat.json
locomotion/calibration/docs/: CORNER_MEASUREMENT_EXPLANATION.md  PRINTING_GUIDE.md  four_point_measurement.md
locomotion/calibration/src/: CalibrationPipeline.cpp  CalibrationSession.cpp  CharucoDetector.cpp  FloorPlaneEstimator.cpp  HumanDetector.cpp  PlaymatLayout.cpp  ToioCoordinateTransform.cpp
locomotion/calibration/tools/: README.md  capture_calibration.cpp  generate_charuco_board.py  generate_marker_sheet.py  generate_printing_guide.py  monitor_human_detection.cpp
locomotion/robot/: CMakeLists.txt  README.md
locomotion/robot/include/locomotion/robot/: MotionPlanner.h
locomotion/robot/src/: MotionPlanner.cpp
m5-toio/examples/: toio_target_connect.cpp
m5-toio/firmware/: platformio.ini
m5-toio/firmware/doc/: goal_tracker_spec.md  toio_controller_spec.md  ui_spec.md
m5-toio/firmware/src/: main.cpp  toio_controller.cpp  toio_controller.h  要件定義.md
state/: devices.json
swarm/contorl_server/: CMakeLists.txt  DESIGN.md  IMPLEMENTATION_PLAN.md  README.md
swarm/contorl_server/config/: control_server.example.json  control_server.json
swarm/contorl_server/docs/: control_webui_ws_spec.md  cpp_relay_client_spec.md  relay_json_spec.md
swarm/contorl_server/include/: app.hpp  command_gateway.hpp  (+5 more)
swarm/cpp_client/: CMakeLists.txt  New_develop.md  README.md  SPEC.md
swarm/relay_server/: RaspberryPiの初期設定.md
swarm/web_cliant/: webgui.html
(+38 files in other folders)
